# normal

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  pyproject.toml
.githooks/: commit-msg  pre-push
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
datasets/movie_comparison/: apple_tv_plus_snapshot.json
docs/: agent.md  architecture.md  commands.md  install.md  movies.md  music.md  quickstart.md  release.md  roadmap.md  safety.md  statement.md  workbench_typography.md  writing.md
docs/internal/: AI-principles-development-session-raw.md  audit-ledger-semantics.md  canonical-cross-section-raw-movie-titles.md  community-layer-artefacts-and-boards.md  dev note.odt  forced-subtitle-packet-count-inference.md  foreign-original-audio-language.md  human-voice-trust-signal.md  library-prestige-community-layer.md  light-experimental-ui.md  menu-action-bar-audio-subtitle-chain-notes.md  movie-comparison-card-spec.md  movie-comparison-service-targets.md  normalize-round2-status.md  one-shot-movie-normalization-logic.md  policy-editor-ownership-and-rail-reflow-plan.md  policy-forecast-library-shape-planner.md  table-principle-and-spec.md  testing-brittleness-runtime-config-loading.md  tv-lane-seam.md  ui-ux-spec-pamphlet-workbench-v2.md  ui-ux-spec-pamphlet-workbench.md  video-bitrate-vintage-cutoff.md  (+4 more)
normal/: __init__.py  __main__.py  apply.py  artwork.py  audit.py  cli.py  commands.py  execution_queue.py  library_improvement.py  library_roots.py  mkvpropedit_fix.py  models.py  mounts.py  movie_apply.py  movie_artwork.py  movie_audio_fix.py  movie_canonical_lists.py  movie_comparison.py  movie_enriched.py  movie_identity.py  movie_immersive_confirmations.py  movie_inspect.py  movie_junk.py  movie_moron_encoders.py  movie_naming.py  movie_omdb.py  movie_plan.py  movie_preclean.py  movie_profile.py  movie_repair_fix.py  movie_repair_planner.py  movie_replacement_queue.py  movie_scan.py  movie_subtitle_fix.py  movie_subtitle_history.py  movie_title_traits.py  music_profile.py  music_replacement_queue.py  output.py  paths.py  (+9 more)
scripts/: dev-flush.sh  take_screenshots.py
tests/: conftest.py  test_apply.py  test_artwork.py  test_audit.py  test_cli.py  test_e2e.py  test_execution_queue.py  test_library_improvement.py  test_mkvpropedit_fix.py  test_moron_encoders.py  test_mounts.py  test_movie_apply_path_safety.py  test_movie_audio_fix.py  test_movie_canonical_lists.py  test_movie_comparison.py  test_movie_enriched.py  test_movie_immersive_confirmations.py  test_movie_inspect.py  test_movie_junk.py  test_movie_naming.py  test_movie_normalize_web.py  test_movie_omdb.py  test_movie_one_shot_normalize.py  test_movie_plan.py  test_movie_profile.py  test_movie_repair_fix.py  test_movie_repair_planner.py  test_movie_replacement_queue.py  test_movie_scan.py  test_movie_subtitle_fix.py  test_movie_title_traits.py  test_music_profile.py  test_music_replacement_queue.py  test_output.py  test_paths.py  test_pathsafe.py  test_plan.py  test_probe_cache.py  test_quality_review.py  test_queue_web.py  (+9 more)
(+36 files in other folders)
