[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "normal"
version = "0.1.0"
description = "Local workbench for diagnosing and cleaning movie libraries"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "openpyxl>=3.1",
  "Pillow>=10.0",
]
authors = [
  { name = "Lachlan" }
]

[project.scripts]
normal = "normal.cli:main"

[tool.setuptools]
packages = ["normal"]
