[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "normal"
version = "0.7.0a9"
description = "Local workbench for diagnosing and cleaning movie libraries"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12,<3.15"
keywords = [
  "movie-library",
  "media-library",
  "media-management",
  "ffprobe",
  "ffmpeg",
  "cli",
  "web-ui",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Multimedia :: Video",
  "Topic :: Utilities",
]
dependencies = [
  "openpyxl>=3.1",
]
authors = [
  { name = "Lachlan" }
]

[project.urls]
Homepage = "https://github.com/lmckellar/normal"
Repository = "https://github.com/lmckellar/normal.git"
Issues = "https://github.com/lmckellar/normal/issues"
Documentation = "https://github.com/lmckellar/normal#readme"

[project.scripts]
normal = "normal.cli:main"

[tool.setuptools.packages.find]
include = ["normal*"]

[tool.setuptools.package-data]
normal = ["web_assets/*", "data/*.json"]
